# json-memory

./: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SPONSORS.md  bench_hermes.py  benchmark.py  benchmark_smart.py  debug_test.py  demo_advanced.json  demo_advanced.meta.json  demo_workflow.episodes.json  demo_workflow.json  demo_workflow.meta.json  my_agent.json  pr_description.md  pr_description.txt  publish.sh  publish_venv.sh  pyproject.toml  setup.py  smart_memory.history.json  smart_memory.json  smart_memory.meta.json  test.json  test.meta.json
.github/: FUNDING.yml
.github/workflows/: publish.yml
docs/: API.md
examples/: advanced_features_demo.py  agent_memory.py  basic_usage.py  comprehensive_benchmark.py  smart_memory_demo.py
json_memory/: __init__.py  adapters.py  compress.py  concept_map.py  consolidation.py  contradiction.py  encryption.py  forgetting.py  memory.py  schema.py  search.py  semantic.py  smart.py  synapse.py  versioning.py  visualizer.py  weight_gate.py
scratch/: repro_history_persistence.py  repro_synapse_persistence.py  test_enc.py  test_formatters.py
tests/: test_adapters.py  test_advanced_search.py  test_auto_protect.py  test_concept_map.py  test_contradiction.py  test_encryption.py  test_forgetting.py  test_json_memory.py  test_medium_priority.py  test_memory_pruning.py  test_negation_handling.py  test_procedural_memory.py  test_search.py  test_smart_memory.py  test_temporal_awareness.py  test_v1_9_features.py  test_versioning.py  test_visualizer.py
