[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-memory"
version = "0.9.0"
description = "Hierarchical associative memory for AI agents — compress, structure, and navigate agent memory like a human brain"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Dion Christian", email = "dion.christiann@gmail.com"}
]
license = {text = "MIT"}
keywords = ["ai", "agent", "memory", "compression", "json", "llm", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/dioncx/json-memory"
Repository = "https://github.com/dioncx/json-memory"
Issues = "https://github.com/dioncx/json-memory/issues"

[project.optional-dependencies]
stem = ["snowballstemmer>=2.0"]  # Porter2 stemmer for better word matching (~200KB)
semantic = ["sentence-transformers>=2.2", "faiss-cpu>=1.7", "numpy>=1.21"]  # Embedding-based semantic search
dev = ["pytest>=8.0", "pytest-cov", "black", "isort", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
